# birdnet-pipeline

./: .gitignore  DESIGN.md  DEVLOG.md  README.md  db.py  mail_config.json.sample  process.py  pyproject.toml  run_ingest.sh  settings.json.sample  species_blacklist.json  stage2_refine.py  update_metadata.py
archive/: README.md  inference_review_2026-03-20.md  vm_q1_report.md
data/: seasonal_occurrence.csv  seasonal_overrides.csv
docs/: README.md  retrain_candidates.md
docs/hardware/: parabolic_mic.md
docs/plans/: future_model_improvements.md  species-identity-key-DRAFT.md  two_stage_pipeline_design.md
pi-scripts/: bird-record.service  install_pi.sh  record.sh  record_config.sh  sync_to_n97.sh
pi-scripts-zerow/: install_pi.sh  record.sh  sync_to_n97.sh
tools/: build_seasonal_occurrence.py  daily_report.py  diagnose_pi.sh  export_labeled_dataset.py  fetch_ebird_species.py  finalize_model.sh  fix_species_metadata.py  relabel_labels_sci.py  validate_species_contract.py
web/: app.py
web/static/: spectrogram.js
web/templates/: blacklist.html  device_edit.html  devices.html  docs.html  docs_list.html  help.html  index.html  labeled.html  reports.html  season.html  settings.html  stats.html  triage.html  whitelist.html
