[project]
name = "bird-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "birdnetlib>=0.18.0",
    "librosa>=0.11.0",
    "numpy<2",
    "pydub>=0.25.1",
    "tflite-runtime>=2.14.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]
